re-edited footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <footer>
 	<p> You can access more information here <a target="_blank" href="https://www.encyclopedia.com/history/news-wires-white-papers-and-books/queen-amina"></a>
   </p>
-	<p>Designed and Coded by Esosa Asabor and Raymond</p>
+	<p>Designed and Coded by Esosa Asabor</p>
 </footer>
 
 
